Menyelesaikan bagian dusun

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -111,7 +111,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ems="10"
-                    android:text="kepaladesa@tenrigangkae.id"
+                    android:text="dusunbombongi@tenrigangkae.id"
                     android:inputType="textEmailAddress"
                     android:textColor="@android:color/black" />
 
@@ -137,7 +137,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ems="10"
-                    android:text="Kepaladesa123#"
+                    android:text="Dusunbombongi123#"
                     android:inputType="textPassword"
                     android:textColor="@android:color/black" />
 
