--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -394,7 +394,7 @@
 
         <WebView
             android:id="@+id/webViewVillageArea"
-            android:layout_width="222dp"
+            android:layout_width="match_parent"
             android:layout_height="222dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
