--- a/app/src/main/res/layout/layout_confirm_check_list.xml
+++ b/app/src/main/res/layout/layout_confirm_check_list.xml
@@ -34,7 +34,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/TexxValue"
+                android:id="@+id/textValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ishak_s_kom"
